[package]
name = "netconfig"
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/GamePad64/netconfig"
description = "Crate for managing network interfaces and IP addresses in a cross-platform way. Supports Windows and Linux (for now)"
categories = ["os", "network-programming"]
keywords = ["network", "networking", "cross-platform"]
rust-version = "1.60"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.35.0", features = ["alloc", "Win32_Foundation", "Win32_System_WindowsProgramming", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"] }
widestring = "0.5.1"
scopeguard = "1.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-sys = "0.8.2"
netlink-packet-route = "0.11.0"

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration-sys = "0.5.0"
core-foundation = "0.9.3"

[target.'cfg(unix)'.dependencies]
nix = "0.24.0"
libc = "0.2.123"
ipnetwork = "0.19.0"

[dependencies]
ipnet = "2.4.0"
log = "0.4.16"
cfg-if = "1.0.0"
delegate = "0.6.2"

[workspace]
members = [
    "netconfigctl"
]
