[package]
name = "netconfig"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/GamePad64/netconfig"
description = "Crate for managing network interfaces and IP addresses in a cross-platform way. Supports Windows and Linux (for now)"
categories = ["os", "network-programming"]
keywords = ["network", "networking", "cross-platform"]
rust-version = "1.60"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.38.0", features = ["alloc", "Win32_Foundation", "Win32_System_WindowsProgramming", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"] }
widestring = "1.0.0"
scopeguard = "1.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-sys = "0.8.2"
netlink-packet-route = "0.11.0"

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration-sys = "0.5.0"
core-foundation = "0.9.3"

[target.'cfg(unix)'.dependencies]
nix = "0.24.1"
libc = "0.2.133"
ipnetwork = "0.19.0"

[dependencies]
ipnet = "2.5.0"
log = "0.4.17"
cfg-if = "1.0.0"
delegate = "0.7.0"
thiserror = "1.0.34"

[workspace]
members = [
    "netconfigctl"
]
