[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/GamePad64/netconfig"
rust-version = "1.64"

[package]
name = "netconfig"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Crate for managing network interfaces and IP addresses in a cross-platform way. Supports Windows and Linux (for now)"
categories = ["os", "network-programming"]
keywords = ["network", "networking", "cross-platform"]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.43.0", features = ["Win32_Foundation", "Win32_System_WindowsProgramming", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"] }
widestring = "1.0.2"
scopeguard = "1.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-sys = "0.8.3"
netlink-packet-route = "0.13.0"

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration-sys = "0.5.0"
core-foundation = "0.9.3"

[target.'cfg(unix)'.dependencies]
nix = "0.25.0"
libc = "0.2.135"

[dependencies]
ipnet = "2.7.0"
log = "0.4.17"
cfg-if = "1.0.0"
delegate = "0.8.0"
thiserror = "1.0.37"
advmac = "1.0.3"

[workspace]
members = [
    "netconfigctl"
]
