[package]
name = "netconfig-macaddr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
thiserror = "1.0.37"
rand = "0.8.5"
hex = "0.4.3"

[dev-dependencies]
serde_json = "1.0.85"
