[package]
name = "netconfig-macaddr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
hex = { version = "0.4.3", default-features = false }
cfg-if = "1.0.0"
snafu = { version = "0.7.1", default-features = false }

[dev-dependencies]
serde_json = "1.0.85"

[features]
default = ["std"]
std = ["hex/std", "rand/std", "snafu/std", "serde/std"]
