[package]
name = "netconfigctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netconfig = { version = "0.2.0", path = ".."}
env_logger = "0.9.1"
cfg-if = "1.0.0"
clap = { version = "4.0.9", features = ["derive"] }
